--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 
 .labels {
   width: 600px;
-  height: 20%;
+  height: 21%;
 }
 .labels #break-label, .labels #session-label {
   width: 250px;
@@ -23,6 +23,7 @@
   font-size: 1.35em;
 }
 .labels i {
+  border: none;
   font-size: 2em;
 }
 
@@ -46,10 +47,14 @@
   margin: 10px;
   display: flex;
   justify-content: center;
+  gap: 10px;
 }
-#timer-controller #buttons #reset, #timer-controller #buttons #start-stop {
+#timer-controller #buttons #reset, #timer-controller #buttons #start_stop {
   width: 40px;
   height: 40px;
+  border-radius: 0px;
+  border: 3px solid #000;
+  padding-left: 9px;
 }
 
 @media screen and (max-width: 600px) {
@@ -79,7 +84,7 @@
     width: 120px;
   }
   .labels h3 {
-    font-size: 1em;
+    font-size: 0.95em;
   }
   .labels .length {
     font-size: 1em;
