--- a/src/App.scss
+++ b/src/App.scss
@@ -10,7 +10,7 @@ $mainColor: #000;
 
 .labels {
     width: 600px;
-    height: 20%;
+    height: 21%;
 
     #break-label, #session-label {
         width: 250px;
@@ -27,6 +27,7 @@ $mainColor: #000;
     }
 
     i {
+        border: none;
         font-size: 2em;
     }
 }
@@ -55,10 +56,14 @@ $mainColor: #000;
         margin: 10px;
         display: flex;
         justify-content: center;
+        gap: 10px;
 
-        #reset, #start-stop {
+        #reset, #start_stop {
             width: 40px;
             height: 40px;
+            border-radius: 0px;
+            border: 3px solid $mainColor;
+            padding-left: 9px;
         }
     }
 }
@@ -96,7 +101,7 @@ $mainColor: #000;
         }
 
         h3 {
-            font-size: 1em;
+            font-size: 0.95em;
         }
 
         .length {
